간단한 login 컨트롤러 작성
db 없는 로그인 프로토콜

--- a/APIServer/APIServer.csproj
+++ b/APIServer/APIServer.csproj
@@ -9,6 +9,11 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+        <PackageReference Include="ZLogger" Version="1.6.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ServerCommon\ServerCommon.csproj" />
     </ItemGroup>
 
 </Project>
