--- a/APIServer/appsettings.Development.json
+++ b/APIServer/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DBConnection": {
+    "MySqlGame": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;",
+    "Redis": "127.0.0.1:6379"
   }
 }
