--- a/APIServer/appsettings.json
+++ b/APIServer/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DBConnection": {
+    "MySqlGame": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;",
+    "Redis": "127.0.0.1:6379"
+  }
 }
