login, createAccount 기능
conf는 전달 안됨.

--- a/APIServer/appsettings.Development.json
+++ b/APIServer/appsettings.Development.json
@@ -5,8 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DBConnection": {
-    "MySqlGame": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;",
-    "Redis": "127.0.0.1:6379"
+  "SessionConfig": {
+    "SessionCacheRedisIp": "127.0.0.1:6379",
+    "SessionCacheRedisInstanceName": "SessionCache",
+    "SessionExpirationPeriod": 86400.0
+  },
+  "CommonDbConfig": {
+    "ConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;"
   }
 }
