--- a/APIServer/appsettings.json
+++ b/APIServer/appsettings.json
@@ -6,8 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "DBConnection": {
-    "MySqlGame": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;",
-    "Redis": "127.0.0.1:6379"
+  "SessionConfig": {
+    "SessionCacheRedisIp": "127.0.0.1:6379",
+    "SessionCacheRedisInstanceName": "SessionCache",
+    "SessionExpirationPeriod": 86400.0
+  },
+  "CommonDbConfig": {
+    "ConnStr": "host=127.0.0.1;port=3306;user id=root;password=root1234;database=game;"
   }
 }
