팀장님 Feedback Fix
팀장님 Feedback Fix

--- a/APIServer/appsettings.json
+++ b/APIServer/appsettings.json
@@ -7,11 +7,9 @@
   },
   "AllowedHosts": "*",
   "SessionConfig": {
-    "SessionCacheRedisIp": "127.0.0.1:6379",
-    "SessionCacheRedisInstanceName": "SessionCache",
-    "SessionExpirationPeriod": 86400.0
+    "SessionCacheRedisIp": "127.0.0.1:6379"
   },
-  "CommonDbConfig": {
+  "AccountDbConfig": {
     "ConnStr": "host=127.0.0.1;port=3306;user id=root;password=root1234;database=game;"
   }
 }
