--- a/APIServer/appsettings.Development.json
+++ b/APIServer/appsettings.Development.json
@@ -6,11 +6,9 @@
     }
   },
   "SessionConfig": {
-    "SessionCacheRedisIp": "127.0.0.1:6379",
-    "SessionCacheRedisInstanceName": "SessionCache",
-    "SessionExpirationPeriod": 86400.0
+    "SessionCacheRedisIp": "127.0.0.1:6379"
   },
-  "CommonDbConfig": {
+  "AccountDbConfig": {
     "ConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;"
   }
 }
