--- a/APIServer/appsettings.json
+++ b/APIServer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -9,7 +9,7 @@
   "SessionConfig": {
     "SessionCacheRedisIp": "127.0.0.1:6379"
   },
-  "AccountDbConfig": {
+  "DbConfig": {
     "ConnStr": "host=127.0.0.1;port=3306;user id=root;password=root1234;database=game;"
   }
 }
