--- a/APIServer/appsettings.Development.json
+++ b/APIServer/appsettings.Development.json
@@ -1,14 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "SessionConfig": {
     "SessionCacheRedisIp": "127.0.0.1:6379"
   },
-  "AccountDbConfig": {
+  "DbConfig": {
     "ConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;"
   }
 }
