--- a/APIServer/Properties/launchSettings.json
+++ b/APIServer/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Port": "7000"
       }
     },
     "IIS Express": {
