피드백 완성
피드백 완성

--- a/APIServer/appsettings.json
+++ b/APIServer/appsettings.json
@@ -10,6 +10,7 @@
     "SessionCacheRedisIp": "127.0.0.1:6379"
   },
   "DbConfig": {
-    "ConnStr": "host=127.0.0.1;port=3306;user id=root;password=root1234;database=game;"
+    "AccountConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=account;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;",
+    "GameConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;"
   }
 }
