robot 엑셀에서 db로 추가 성공
집 vs로 robot 엑셀에서 db로 추가 성공

--- a/CSV2DatabaseTool/App.config
+++ b/CSV2DatabaseTool/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <appSettings>
-    <add key="DBConnection" value="Server=127.0.0.1;User ID=root;Password=root1234;Database=game;" />
+    <add key="DBConnection" value="Server=127.0.0.1;User ID=root;Password=root1234;Database=game;AllowUserVariables=True;" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
