--- a/Excel2DbTool/Excel2DbTool/packages.config
+++ b/Excel2DbTool/Excel2DbTool/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.123" targetFramework="net48" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net48" />
   <package id="MySqlConnector" version="2.1.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net48" />
