--- a/APIServer/appsettings.Development.json
+++ b/APIServer/appsettings.Development.json
@@ -11,5 +11,9 @@
   "DbConfig": {
     "AccountConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=account;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;",
     "GameConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;"
+  },
+  "EmailConfig": {
+    "ID": "jriver0326@outlook.com",
+    "PW": "root9876"
   }
 }
