--- a/APIServer/APIServer.csproj
+++ b/APIServer/APIServer.csproj
@@ -32,6 +32,7 @@
       <None Update="Properties\launchSettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <Compile Remove="Services\EmailManager.cs" />
     </ItemGroup>
 
 </Project>
