--- a/APIServer/appsettings.Development.json
+++ b/APIServer/appsettings.Development.json
@@ -9,7 +9,7 @@
     "SessionCacheRedisIp": "127.0.0.1:6379"
   },
   "DbConfig": {
-    "AccountConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=account;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;AllowZeroDatetime=True;",
-    "GameConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;AllowZeroDatetime=True;"
-  },
+    "AccountConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=account;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;AllowZeroDatetime=True;IgnoreCommandTransaction=true;",
+    "GameConnStr": "server=127.0.0.1;user=root;password=root1234;port=3306;database=game;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;AllowZeroDatetime=True;IgnoreCommandTransaction=true;"
+  }
 }
