--- a/APIServer/APIServer.csproj
+++ b/APIServer/APIServer.csproj
@@ -15,9 +15,8 @@
         <PackageReference Include="Dapper" Version="2.0.123" />
         <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
         <PackageReference Include="MySqlConnector" Version="2.1.0" />
-        <PackageReference Include="NLog" Version="4.7.13" />
-        <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+        <PackageReference Include="ZLogger" Version="1.6.1" />
     </ItemGroup>
 
     <ItemGroup>
