startpup 6로 변경, conf파일 추가

--- a/APIServer/appsettings.Development.json
+++ b/APIServer/appsettings.Development.json
@@ -1,10 +1,13 @@
 {
+  "Mode": "Development",
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
   "SessionConfig": {
     "SessionCacheRedisIp": "127.0.0.1:6379"
   },
