--- a/APIServer/appsettings.json
+++ b/APIServer/appsettings.json
@@ -2,8 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Error",
+      "Microsoft.Hosting.Lifetime": "Error"
     }
   },
   "AllowedHosts": "*",
