--- a/APIServer/APIServer.csproj
+++ b/APIServer/APIServer.csproj
@@ -30,6 +30,9 @@
       <Content Update="appsettings.Development.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <Content Update="MyConfig.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
       <Content Update="nlog.config">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
