--- a/Setting/fluentdSettings/fluent.conf
+++ b/Setting/fluentdSettings/fluent.conf
@@ -3,7 +3,7 @@
   @type tail
   @id in_tail_test
   @label @raw
-  path /fluentd/logs/logTest.log
+  path /fluentd/logs/*.log
   pos_file /fluentd/logs/logTest.pos
   tag log
   read_from_head false
